[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Controls/PortControl.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -980.0
margin_bottom = -688.0
rect_min_size = Vector2( 392, 32 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit" type="LineEdit" parent="Panel/HBoxContainer"]
margin_right = 213.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
text = "Control 0"
align = 1
placeholder_text = "Control Name"

[node name="Label" type="Label" parent="Panel/HBoxContainer"]
margin_left = 217.0
margin_top = 9.0
margin_right = 345.0
margin_bottom = 23.0
rect_min_size = Vector2( 128, 0 )
text = "Analog 2 Axis"

[node name="AddButton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 349.0
margin_right = 369.0
margin_bottom = 32.0
hint_tooltip = "Add control element to graph"
text = "+"

[node name="DeleteButton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 373.0
margin_right = 392.0
margin_bottom = 32.0
text = "x"

[connection signal="text_changed" from="Panel/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Panel/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
